# streamlit-portainer-dashboard

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.streamlit  PERFORMANCE_AUDIT_PLAN.md  README.md  SECURITY_ASSESSMENT.md  SECURITY_REVIEW.md  docker-compose.e2e.yml  docker-compose.hybrid.yml  docker-compose.yml  pyproject.toml  requirements.txt  sitecustomize.py
.github/: dependabot.yml
.github/workflows/: ci.yml  daily-rebuild.yml  e2e.yml
.streamlit/: config.toml
.streamlit/themes/: lucerne_dark.toml  lucerne_light.toml
app/: Home.py  __init__.py  _jwt_stub.py  auth.py  dashboard_state.py  environment_cache.py  file_locking.py  logging_config.py  logging_setup.py  main.py  portainer_client.py  session_storage.py  settings.py  tls.py  ui_helpers.py
app/.streamlit/: config.toml
app/config/: __init__.py
app/managers/: background_job_runner.py  environment_manager.py
docs/: authentication_operations.md  llm_context_management.md  module_boundaries.md  portainer_data_audit.md
jwt/: __init__.py
scripts/: check_app_starts.sh
streamlit_ui/: Home.py  __init__.py  api_client.py  shared.py
templates/: base.html
tests/: __init__.py  _jwt_stub.py  conftest.py  test_auth.py  test_auth_oidc.py  test_backup_scheduler.py  test_backup_service.py  test_dashboard_state.py  test_edge_agent_logs_helpers.py  test_environment_cache.py  test_kibana_client.py  test_llm_client.py  test_llm_context_manager.py  test_llm_workflow.py  test_logging_setup.py  test_portainer_client.py  test_session_storage.py  test_tls.py
(+161 files in other folders)
